src/test/minijava/success/ConstructorTest.mjava
class A {
    public A() {
    }
}

public class ConstructorTest {

    public static void main(String[] args) {
        A a = new A();
    }
}